--- a/index.html
+++ b/index.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html/>
 <html>
-  <!-- Project started Decemeber 8, 2014
-       Last updated December 17, 2014 -->
+
   <head>
-    <title>Browser Pong</title>
+    <title>Browser Ping Pong</title>
 	<meta http-equiv="content-type" content="text/html; charset=UTF-8">
 	<link rel="shortcut icon" type="image/x-icon" href="graphics/bpong.ico">
 	<meta name="language" content="en">
 	<meta name="keywords" content="Open Source, Games, HTML, CSS, JavaScript, Pong">
 	<meta name="description" content="Browser pong is pong in your browser. Based off the original game by Atari, and built using HTML, CSS, and JavaScript.">
-	<meta name="author" content="Seth Clydesdale">
+	<meta name="author" content="AVSC">
 	<link rel="stylesheet" type="text/css" href="stylesheet.css">
   </head>
   <body>
